# ocs2_ros2

./: .clang-format  README.md
ocs2/: CMakeLists.txt  package.xml
ocs2_core/: CMakeLists.txt  package.xml
ocs2_core/cmake/: ocs2_cxx_flags.cmake
ocs2_core/include/ocs2_core/integration/: TrapezoidalIntegration.h
ocs2_ddp/: CMakeLists.txt  package.xml
ocs2_frank_wolfe/: CMakeLists.txt  package.xml
ocs2_ipm/: CMakeLists.txt  package.xml
ocs2_mpc/: CMakeLists.txt  package.xml
ocs2_msgs/: CMakeLists.txt  package.xml
ocs2_oc/: CMakeLists.txt  package.xml
ocs2_oc/src/rollout/: PerformanceIndicesRollout.cpp
ocs2_ocs2/: CMakeLists.txt  package.xml
ocs2_perceptive/: CMakeLists.txt  package.xml
ocs2_perceptive/include/ocs2_perceptive/distance_transform/: ComputeDistanceTransform.h
ocs2_perceptive/include/ocs2_perceptive/distance_transform/implementation/: ComputeDistanceTransform.h
ocs2_pinocchio/ocs2_centroidal_model/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_centroidal_model/cmake/: pinocchio_config.cmake
ocs2_pinocchio/ocs2_pinocchio/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_pinocchio_interface/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision_visualization/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_sphere_approximation/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_sphere_approximation/src/: SphereApproximation.cpp
ocs2_pinocchio/ocs2_sphere_approximation/test/: testPinocchioSphereKinematics.cpp
ocs2_python_interface/: CMakeLists.txt  package.xml  setup.py
ocs2_raisim/ocs2_legged_robot_raisim/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_legged_robot_raisim/include/ocs2_legged_robot_raisim/: LeggedRobotRaisimVisualizer.h
ocs2_raisim/ocs2_legged_robot_raisim/launch/: legged_robot_ddp_raisim.launch.py  legged_robot_sqp_raisim.launch.py
ocs2_raisim/ocs2_legged_robot_raisim/src/: LeggedRobotRaisimDummyNode.cpp  LeggedRobotRaisimVisualizer.cpp
ocs2_raisim/ocs2_legged_robot_raisim/test/: testLeggedRobotRaisimConversions.cpp
ocs2_raisim/ocs2_raisim/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim_core/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim_ros/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim_ros/include/ocs2_raisim_ros/: RaisimHeightmapRosConverter.h
ocs2_raisim/ocs2_raisim_ros/src/: RaisimHeightmapRosConverter.cpp
ocs2_raisim/ocs2_raisim_ros/test/: testRosConversion.cpp
ocs2_robotic_examples/ocs2_ballbot/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_ballbot/src/: BallbotSimpleExample.cpp
ocs2_robotic_examples/ocs2_ballbot_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_cartpole/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_cartpole/config/multiplot/: mpc_metrics.xml
ocs2_robotic_examples/ocs2_cartpole_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_double_integrator/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_double_integrator_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot/config/multiplot/: friction_cone.xml  zero_velocity.xml
ocs2_robotic_examples/ocs2_legged_robot/src/: LeggedRobotInterface.cpp
ocs2_robotic_examples/ocs2_legged_robot_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot_ros/include/ocs2_legged_robot_ros/visualization/: LeggedRobotVisualizer.h
ocs2_robotic_examples/ocs2_legged_robot_ros/rviz/: legged_robot.rviz
ocs2_robotic_examples/ocs2_legged_robot_ros/src/visualization/: LeggedRobotVisualizer.cpp
ocs2_robotic_examples/ocs2_mobile_manipulator/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_mobile_manipulator_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_anymal_commands/: CMakeLists.txt
ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_anymal_loopshaping_mpc/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_anymal_mpc/: CMakeLists.txt
ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_quadruped_interface/: CMakeLists.txt
ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_quadruped_loopshaping_interface/: CMakeLists.txt
ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_switched_model_interface/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_switched_model_msgs/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_switched_model_msgs/msg/: Gait.msg
ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_switched_model_msgs/srv/: TrajectoryRequest.srv
ocs2_robotic_examples/ocs2_perceptive_anymal/segmented_planes_terrain_model/src/: SegmentedPlanesTerrainModelRos.cpp
ocs2_robotic_examples/ocs2_quadrotor/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_quadrotor_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_robotic_examples/: CMakeLists.txt  package.xml
ocs2_robotic_tools/: CMakeLists.txt  package.xml
ocs2_ros_interfaces/: CMakeLists.txt  package.xml
ocs2_slp/: CMakeLists.txt  package.xml
ocs2_sqp/blasfeo_catkin/: CMakeLists.txt  package.xml
ocs2_sqp/hpipm_catkin/: CMakeLists.txt  package.xml
ocs2_sqp/ocs2_sqp/: CMakeLists.txt  README.md  package.xml
ocs2_test_tools/ocs2_qp_solver/: CMakeLists.txt  package.xml
ocs2_thirdparty/: CMakeLists.txt  package.xml
